Improve DynamoDB contention handling
- Create folder index records with conditional writes instead of explicit locks
- Update parent folder timestamps based on persisted age, not an in-memory cache
- Map retryable DynamoDB exceptions to HTTP 429 responses